--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@supabase/supabase-js": "^2.76.1",
     "next": "16.0.0",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "sweetalert2": "^11.26.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
