--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.76.1",
+    "lucide-react": "^0.552.0",
     "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
